docs(user): add "update my email" swagger doc
